fix add to cart price alignment

--- a/assets/base.css
+++ b/assets/base.css
@@ -26687,59 +26687,68 @@ body.multitasking__show .newsletter-popup-opener {
 .buy-button-price .separator {
   margin-left:10px;
   margin-right:15px;
+  display: inline-block !important;
+}
+
+.buy-button-price .separator-fix {
   display: none !important;
 }
+
 @media screen and (min-width:392px){
-  .buy-button-price .separator {
+  .buy-button-price .separator-fix {
     display: inline-block !important;
   }
 }
 @media screen and (min-width:990px){
-  .buy-button-price .separator {
+  .buy-button-price .separator-fix {
     display: none !important;
   }
 }
 @media screen and (min-width:1099px){
-  .buy-button-price .separator {
+  .buy-button-price .separator-fix {
     display: inline-block !important;
   }
 }
 @media screen and (min-width:1200px){
-  .buy-button-price .separator {
+  .buy-button-price .separator-fix {
     display: none !important;
   }
 }
 @media screen and (min-width:1432px){
-  .buy-button-price .separator {
+  .buy-button-price .separator-fix {
     display: inline-block !important;
   }
 }
 
 .buy-button-price .price-alignment {
+  float: right !important;
+}
+
+.buy-button-price .price-alignment-fix {
   float: unset !important;
 }
 @media screen and (min-width:392px){
-  .buy-button-price .price-alignment {
+  .buy-button-price .price-alignment-fix {
     float: right !important;
   }
 }
 @media screen and (min-width:990px){
-  .buy-button-price .price-alignment {
+  .buy-button-price .price-alignment-fix {
     float: unset !important;
   }
 }
 @media screen and (min-width:1099px){
-  .buy-button-price .price-alignment {
+  .buy-button-price .price-alignment-fix {
     float: right !important;
   }
 }
 @media screen and (min-width:1200px){
-  .buy-button-price .price-alignment {
+  .buy-button-price .price-alignment-fix {
     float: unset !important;
   }
 }
 @media screen and (min-width:1432px){
-  .buy-button-price .price-alignment {
+  .buy-button-price .price-alignment-fix {
     float: right !important;
   }
 }
